Mail and octicon bad align fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -126,7 +126,7 @@ header li {
 
 header ul a {
     color: #39c;
-    display: block;
+    display: inline;
 }
 
 header ul a strong {
